# rediql

./: .gitignore  AGENTS.md  CMakeList.txt  CMakeLists.txt  LICENSE  README.md
docs/: ARCHITECTURE.md  DESIGN_NOTES.md  ROADMAP.md  TROUBLESHOOTING.md
src/core/: cell.hpp  table.hpp  types.hpp
tests/cpp/: utils.hpp
tests/cpp/unit/: main.cpp  test_cell.cpp  test_table.cpp
